working fastapi for ml models

--- a/test_models.ipynb
+++ b/test_models.ipynb
@@ -1806,10 +1806,292 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Phenotype</th>\n",
+       "      <th>Species</th>\n",
+       "      <th>Family</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age Group</th>\n",
+       "      <th>Speciality</th>\n",
+       "      <th>Source</th>\n",
+       "      <th>In / Out Patient</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Antibiotic</th>\n",
+       "      <th>MIC_Interpretation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>MRSA</td>\n",
+       "      <td>Staphylococcus aureus</td>\n",
+       "      <td>Staphylococcus spp</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>85 and Over</td>\n",
+       "      <td>Medicine General</td>\n",
+       "      <td>Sputum</td>\n",
+       "      <td>Inpatient</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>Erythromycin</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Pseudomonas aeruginosa</td>\n",
+       "      <td>Non-Enterobacterales</td>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>19 to 64 Years</td>\n",
+       "      <td>Medicine ICU</td>\n",
+       "      <td>Peritoneal Fluid</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>Ceftazidime avibactam</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Klebsiella pneumoniae</td>\n",
+       "      <td>Enterobacteriaceae</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>19 to 64 Years</td>\n",
+       "      <td>Emergency Room</td>\n",
+       "      <td>Urine</td>\n",
+       "      <td>None Given</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>Levofloxacin</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Acinetobacter baumannii</td>\n",
+       "      <td>Non-Enterobacteriaceae</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>85 and Over</td>\n",
+       "      <td>Medicine General</td>\n",
+       "      <td>Urine</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>Ceftazidime</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>MRSA</td>\n",
+       "      <td>Staphylococcus aureus</td>\n",
+       "      <td>Staphylococcus spp</td>\n",
+       "      <td>Russia</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>19 to 64 Years</td>\n",
+       "      <td>Medicine ICU</td>\n",
+       "      <td>Bronchoalveolar lavage</td>\n",
+       "      <td>Inpatient</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>Teicoplanin</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3190072</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Pseudomonas aeruginosa</td>\n",
+       "      <td>Non-Enterobacteriaceae</td>\n",
+       "      <td>Panama</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>65 to 84 Years</td>\n",
+       "      <td>Surgery General</td>\n",
+       "      <td>Ulcer</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>Colistin</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3190073</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Klebsiella aerogenes</td>\n",
+       "      <td>Enterobacterales</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>65 to 84 Years</td>\n",
+       "      <td>Medicine General</td>\n",
+       "      <td>Sputum</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>Ceftaroline</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3190074</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Staphylococcus epidermidis</td>\n",
+       "      <td>Staphylococcus spp</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>19 to 64 Years</td>\n",
+       "      <td>Medicine ICU</td>\n",
+       "      <td>Blood</td>\n",
+       "      <td>None Given</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>Levofloxacin</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3190075</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Pseudomonas aeruginosa</td>\n",
+       "      <td>Non-Enterobacteriaceae</td>\n",
+       "      <td>Greece</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>19 to 64 Years</td>\n",
+       "      <td>Pediatric General</td>\n",
+       "      <td>Skin: Other</td>\n",
+       "      <td>Inpatient</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>Ceftazidime</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3190076</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Streptococcus pneumoniae</td>\n",
+       "      <td>Streptococcus pneumoniae</td>\n",
+       "      <td>Saudi Arabia</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>19 to 64 Years</td>\n",
+       "      <td>Medicine General</td>\n",
+       "      <td>Sputum</td>\n",
+       "      <td>Inpatient</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>Penicillin</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3190077 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Phenotype                     Species                    Family  \\\n",
+       "0            MRSA       Staphylococcus aureus        Staphylococcus spp   \n",
+       "1             NaN      Pseudomonas aeruginosa      Non-Enterobacterales   \n",
+       "2             NaN       Klebsiella pneumoniae        Enterobacteriaceae   \n",
+       "3             NaN     Acinetobacter baumannii    Non-Enterobacteriaceae   \n",
+       "4            MRSA       Staphylococcus aureus        Staphylococcus spp   \n",
+       "...           ...                         ...                       ...   \n",
+       "3190072       NaN      Pseudomonas aeruginosa    Non-Enterobacteriaceae   \n",
+       "3190073       NaN        Klebsiella aerogenes          Enterobacterales   \n",
+       "3190074       NaN  Staphylococcus epidermidis        Staphylococcus spp   \n",
+       "3190075       NaN      Pseudomonas aeruginosa    Non-Enterobacteriaceae   \n",
+       "3190076       NaN    Streptococcus pneumoniae  Streptococcus pneumoniae   \n",
+       "\n",
+       "               Country         State  Gender       Age Group  \\\n",
+       "0            Australia           NaN    Male     85 and Over   \n",
+       "1               Brazil           NaN  Female  19 to 64 Years   \n",
+       "2        United States  Pennsylvania  Female  19 to 64 Years   \n",
+       "3                Italy           NaN    Male     85 and Over   \n",
+       "4               Russia           NaN    Male  19 to 64 Years   \n",
+       "...                ...           ...     ...             ...   \n",
+       "3190072         Panama           NaN  Female  65 to 84 Years   \n",
+       "3190073  United States    New Jersey    Male  65 to 84 Years   \n",
+       "3190074  United States      New York    Male  19 to 64 Years   \n",
+       "3190075         Greece           NaN    Male  19 to 64 Years   \n",
+       "3190076   Saudi Arabia           NaN  Female  19 to 64 Years   \n",
+       "\n",
+       "                Speciality                  Source In / Out Patient  Year  \\\n",
+       "0         Medicine General                  Sputum        Inpatient  2013   \n",
+       "1             Medicine ICU        Peritoneal Fluid              NaN  2022   \n",
+       "2           Emergency Room                   Urine       None Given  2012   \n",
+       "3         Medicine General                   Urine              NaN  2021   \n",
+       "4             Medicine ICU  Bronchoalveolar lavage        Inpatient  2017   \n",
+       "...                    ...                     ...              ...   ...   \n",
+       "3190072    Surgery General                   Ulcer              NaN  2019   \n",
+       "3190073   Medicine General                  Sputum              NaN  2022   \n",
+       "3190074       Medicine ICU                   Blood       None Given  2020   \n",
+       "3190075  Pediatric General             Skin: Other        Inpatient  2016   \n",
+       "3190076   Medicine General                  Sputum        Inpatient  2013   \n",
+       "\n",
+       "                    Antibiotic  MIC_Interpretation  \n",
+       "0                 Erythromycin                   1  \n",
+       "1        Ceftazidime avibactam                   2  \n",
+       "2                 Levofloxacin                   2  \n",
+       "3                  Ceftazidime                   2  \n",
+       "4                  Teicoplanin                   2  \n",
+       "...                        ...                 ...  \n",
+       "3190072               Colistin                   0  \n",
+       "3190073            Ceftaroline                   2  \n",
+       "3190074           Levofloxacin                   2  \n",
+       "3190075            Ceftazidime                   2  \n",
+       "3190076             Penicillin                   2  \n",
+       "\n",
+       "[3190077 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "pd.read_csv(\"/Users/thomaslim/microbis/test_sets/MIC_Interpretation_test_set.csv\")"
+   ]
   }
  ],
  "metadata": {
